@@ -61,9 +61,8 @@ public class LetterDocument extends TextDocument
 
     public XWindowPeer getWindowPeer()
     {
-        XWindowPeer xWindowPeer = (XWindowPeer) UnoRuntime.queryInterface(XWindowPeer.class, xTextDocument);
-        return xWindowPeer;
-    }
+        return UnoRuntime.queryInterface(XWindowPeer.class, xTextDocument);
+}
 
     public void switchElement(String sElement, boolean bState)
     {
@@ -71,7 +70,7 @@ public class LetterDocument extends TextDocument
         {
             TextSectionHandler mySectionHandler = new TextSectionHandler(xMSF, xTextDocument);
             Object oSection = mySectionHandler.xTextSectionsSupplier.getTextSections().getByName(sElement);
-            Helper.setUnoPropertyValue(oSection, "IsVisible", new Boolean(bState));
+            Helper.setUnoPropertyValue(oSection, "IsVisible", Boolean.valueOf(bState));
 
         }
         catch (Exception exception)
@@ -93,20 +92,20 @@ public class LetterDocument extends TextDocument
             try
             {
                 xTextDocument.lockControllers();
-                XStyleFamiliesSupplier xStyleFamiliesSupplier = (XStyleFamiliesSupplier) com.sun.star.uno.UnoRuntime.queryInterface(XStyleFamiliesSupplier.class, xTextDocument);
+                XStyleFamiliesSupplier xStyleFamiliesSupplier = UnoRuntime.queryInterface(XStyleFamiliesSupplier.class, xTextDocument);
                 com.sun.star.container.XNameAccess xNameAccess = null;
                 xNameAccess = xStyleFamiliesSupplier.getStyleFamilies();
 
                 com.sun.star.container.XNameContainer xPageStyleCollection = null;
-                xPageStyleCollection = (com.sun.star.container.XNameContainer) UnoRuntime.queryInterface(com.sun.star.container.XNameContainer.class, xNameAccess.getByName("PageStyles"));
+                xPageStyleCollection = UnoRuntime.queryInterface(com.sun.star.container.XNameContainer.class, xNameAccess.getByName("PageStyles"));
 
                 XText xFooterText;
-                XStyle xPageStyle = (XStyle) UnoRuntime.queryInterface(XStyle.class, xPageStyleCollection.getByName(sPageStyle));
+                XStyle xPageStyle = UnoRuntime.queryInterface(XStyle.class, xPageStyleCollection.getByName(sPageStyle));
 
                 if (bState)
                 {
-                    Helper.setUnoPropertyValue(xPageStyle, "FooterIsOn", new Boolean(true));
-                    xFooterText = (XText) UnoRuntime.queryInterface(XText.class, Helper.getUnoPropertyValue(xPageStyle, "FooterText"));
+                    Helper.setUnoPropertyValue(xPageStyle, "FooterIsOn", Boolean.TRUE);
+                    xFooterText = UnoRuntime.queryInterface(XText.class, Helper.getUnoPropertyValue(xPageStyle, "FooterText"));
                     xFooterText.setString(sText);
                     if (bPageNumber)
                     {
@@ -114,10 +113,10 @@ public class LetterDocument extends TextDocument
                         XTextCursor myCursor = xFooterText.createTextCursor();
                         myCursor.gotoEnd(false);
                         xFooterText.insertControlCharacter(myCursor, ControlCharacter.PARAGRAPH_BREAK, false);
-                        XPropertySet xCursorPSet = (XPropertySet) UnoRuntime.queryInterface(XPropertySet.class, myCursor);
+                        XPropertySet xCursorPSet = UnoRuntime.queryInterface(XPropertySet.class, myCursor);
                         xCursorPSet.setPropertyValue("ParaAdjust", ParagraphAdjust.CENTER);
-                        XTextField xPageNumberField = (XTextField) UnoRuntime.queryInterface(XTextField.class, xMSFDoc.createInstance("com.sun.star.text.TextField.PageNumber"));
-                        XPropertySet xPSet = (XPropertySet) UnoRuntime.queryInterface(XPropertySet.class, xPageNumberField);
+                        XTextField xPageNumberField = UnoRuntime.queryInterface(XTextField.class, xMSFDoc.createInstance("com.sun.star.text.TextField.PageNumber"));
+                        XPropertySet xPSet = UnoRuntime.queryInterface(XPropertySet.class, xPageNumberField);
                         xPSet.setPropertyValue("SubType", PageNumberType.CURRENT);
                         xPSet.setPropertyValue("NumberingType", new Short(NumberingType.ARABIC));
                         xFooterText.insertTextContent(xFooterText.getEnd(), xPageNumberField, false);
@@ -125,7 +124,7 @@ public class LetterDocument extends TextDocument
                 }
                 else
                 {
-                    Helper.setUnoPropertyValue(xPageStyle, "FooterIsOn", new Boolean(false));
+                    Helper.setUnoPropertyValue(xPageStyle, "FooterIsOn", Boolean.FALSE);
                 }
                 xTextDocument.unlockControllers();
             }
@@ -158,7 +157,7 @@ public class LetterDocument extends TextDocument
         }
         else
         {
-            myFieldHandler.changeUserFieldContent(sFieldName, "");
+            myFieldHandler.changeUserFieldContent(sFieldName, PropertyNames.EMPTY_STRING);
         }
     }
 
@@ -183,7 +182,7 @@ public class LetterDocument extends TextDocument
     public void killEmptyUserFields()
     {
         TextFieldHandler myFieldHandler = new TextFieldHandler(xMSF, xTextDocument);
-        myFieldHandler.removeUserFieldByContent("");
+        myFieldHandler.removeUserFieldByContent(PropertyNames.EMPTY_STRING);
     }
 
     public void killEmptyFrames()
@@ -259,8 +258,8 @@ public class LetterDocument extends TextDocument
 
             try
             {
-                xFrame = (XTextFrame) UnoRuntime.queryInterface(XTextFrame.class, xMSFDoc.createInstance("com.sun.star.text.TextFrame"));
-                xShape = (XShape) UnoRuntime.queryInterface(XShape.class, xFrame);
+                xFrame = UnoRuntime.queryInterface(XTextFrame.class, xMSFDoc.createInstance("com.sun.star.text.TextFrame"));
+                xShape = UnoRuntime.queryInterface(XShape.class, xFrame);
 
                 setFramePosition();
                 Helper.setUnoPropertyValue(xShape, "AnchorType", TextContentAnchorType.AT_PAGE);
@@ -276,7 +275,7 @@ public class LetterDocument extends TextDocument
                 Helper.setUnoPropertyValue(xFrame, "RightBorder", myBorder);
                 Helper.setUnoPropertyValue(xFrame, "TopBorder", myBorder);
                 Helper.setUnoPropertyValue(xFrame, "BottomBorder", myBorder);
-                Helper.setUnoPropertyValue(xFrame, "Print", new Boolean(false));
+                Helper.setUnoPropertyValue(xFrame, "Print", Boolean.FALSE);
 
                 XTextCursor xTextCursor = xTextDocument.getText().createTextCursor();
                 xTextCursor.gotoEnd(true);
@@ -285,10 +284,10 @@ public class LetterDocument extends TextDocument
 
                 XText xFrameText = xFrame.getText();
                 XTextCursor xFrameCursor = xFrameText.createTextCursor();
-                XPropertySet xCursorProps = (XPropertySet) UnoRuntime.queryInterface(XPropertySet.class, xFrameCursor);
+                XPropertySet xCursorProps = UnoRuntime.queryInterface(XPropertySet.class, xFrameCursor);
                 xCursorProps.setPropertyValue("CharWeight", new Float(com.sun.star.awt.FontWeight.BOLD));
                 xCursorProps.setPropertyValue("CharColor", 16777215);
-                xCursorProps.setPropertyValue("CharFontName", new String("Albany"));
+                xCursorProps.setPropertyValue("CharFontName", "Albany");
                 xCursorProps.setPropertyValue("CharHeight", new Float(18));
 
                 xFrameText.insertString(xFrameCursor, FrameText, false);
